add option to delete backup

--- a/app/src/main/res/xml/rom_header.xml
+++ b/app/src/main/res/xml/rom_header.xml
@@ -25,6 +25,8 @@
 
         <PreferenceScreen android:key="restore_rom" />
 
+        <PreferenceScreen android:key="delete_backup" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
