add Information Activity for ROMs

--- a/app/src/main/res/xml/rom_header.xml
+++ b/app/src/main/res/xml/rom_header.xml
@@ -25,6 +25,8 @@
 
         <PreferenceScreen android:key="delete_backup" />
 
+        <PreferenceScreen android:key="rom_information" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
