--- a/app/src/main/res/xml/rom_header.xml
+++ b/app/src/main/res/xml/rom_header.xml
@@ -15,6 +15,8 @@
 
         <PreferenceScreen android:summary="@string/advanced_settings_summary" />
 
+        <PreferenceScreen android:key="choose_kernel" />
+
         <PreferenceScreen android:key="remove_rom" />
 
         <PreferenceScreen
