--- a/app/src/main/res/xml/installation_header.xml
+++ b/app/src/main/res/xml/installation_header.xml
@@ -42,7 +42,7 @@
             android:key="manualboot"
             android:title="@string/manualboot" />
 
-        <SwitchPreference
+        <PreferenceScreen
             android:key="appsharing"
             android:title="@string/appsharing" />
 
