--- a/app/src/main/res/layout/progressbar.xml
+++ b/app/src/main/res/layout/progressbar.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent">
 
     <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center" />
 
 </LinearLayout>
