--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_progress"
+        android:id="@+id/action_menu_progress"
         android:actionLayout="@layout/progressbar"
         android:showAsAction="ifRoom|withText"
         android:visible="false"
